# bitrade

./: .dockerignore  .env  .gitignore  CI_README.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  build.rs  config-default.yaml  dev.sh  docker-compose.dev.yml  docker-compose.yml  env.example  migrate.sh  run_migrations.sh  run_migrations_dev.sh  rustfmt.toml  setup.sh  test_services.sh
.github/workflows/: ci.yml  code-quality.yml  database.yml
common/: Cargo.toml
common/src/db/: pagination.rs
common/src/utils/: mod.rs
database/: Cargo.toml  README.md
database/src/: config.rs  db.rs  lib.rs  models.rs  persistence.rs  provider.rs  repository.rs  schema.rs
database/src/filters/: mod.rs
database/src/migrations/2025-03-01-130813_create_initial_tables/: down.sql  up.sql
database/src/migrations/2025-03-02-011351_remove_fields_from_table/: down.sql  up.sql
database/src/migrations/2025-03-04-120116_allow_zero_price/: down.sql  up.sql
database/src/migrations/2025-03-09-210814_improved/: down.sql  up.sql
database/src/migrations/2025-03-12-005742_improvements/: down.sql  up.sql
database/src/migrations/2025-03-13-150302_improvement/: up.sql
database/src/mock/: mock_persister.rs  mock_thread_safe_persistence.rs  mod.rs
database/src/models/: models.rs  schema.rs
database/src/persistence/: mod.rs  persistence.rs  postgres_persister.rs  thread_safe_persistence.rs
database/src/provider/: mod.rs
database/src/repository/: fee_treasury.rs  market_stats.rs  markets.rs  mod.rs  orders.rs  provider.rs  repository.rs  trades.rs  wallets.rs
engine/: Cargo.toml
engine/src/: lib.rs  main.rs  utils.rs
engine/src/config/: app_config.rs
engine/src/grpc/: helper.rs  mod.rs  server.rs  service.rs
engine/src/grpc/proto/: spot.proto
engine/src/market/: market.rs  market_manager.rs  mod.rs
engine/src/models/: adaptor.rs  matched_trade.rs  mod.rs  trade_order.rs
engine/src/order_book/: logger.rs  market_depth.rs  matching.rs  mod.rs  order_book.rs
engine/src/tests/: market_manager_test.rs  mod.rs  test_models.rs
engine/src/validation/: mod.rs
engine/src/wallet/: mod.rs  wallet_service.rs
query/: Cargo.toml  build.rs
query/proto/: query.proto
query/src/: adapter.rs  lib.rs  main.rs  query_service.rs  server.rs  service.rs
query/src/proto/: spot_query.proto
src/: lib.rs  main.rs  service.rs  utils.rs
src/config/: config.rs
src/engine/: matching.rs  order_book.rs
src/exprimental/: order_book.rs
src/grpc/: helper.rs  server.rs  service.rs
src/grpc/proto/: spot.proto
src/market/: market.rs  market_manager.rs  matching.rs  mod.rs
src/models/: market.rs  matched_trade.rs  mod.rs  order.rs  trade.rs  trade_order.rs  verbose_state.rs
src/order_book/: mod.rs  order_book.rs  shared_order_book.rs
src/persist/: db.rs
src/repository/: mod.rs  orders.rs  queries.rs  trades.rs
src/tests/: test_models.rs
src/wallet/: wallet.rs
