[package]
name = "bitrade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5.14"

rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.64"
tokio = { version = "1.43.0", features = [ "full" ] }
log = "0.4"
env_logger = "0.9"
config = "0.15.8"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "numeric", "uuidv07", "r2d2"] }
r2d2 = "0.8.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
diesel_migrations = { version = "1.4.0" }
chrono = "0.4.19"
bigdecimal = ">= 0.0.10, < 0.2.0"
anyhow = "1.0"

tracing-subscriber = "0.3"

structopt = { version = "0.3", default-features = false }
prost = "0.13.5"
crossbeam = "0.8.4"
tonic = "0.12.3"
tracing = "0.1.41"
colored = "3.0.0"
[build-dependencies]
tonic-build = "0.8"

