[workspace]
resolver = "3"

members = [
    "engine",
    "database",
    "common",
    "query",   
]

[workspace.dependencies]
# Database
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "numeric", "chrono", "uuid"] }
diesel_migrations = "2.2.0"
r2d2 = "0.8.10"

# Utilities
dotenv = "0.15.0"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
config = "0.15.8"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
colored = "3.0.0"

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.95"

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.70"

# Async
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.28"
structopt = { version = "0.3", default-features = false }

# Logging
log = "0.4.17"
env_logger = "0.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3"

# gRPC
tonic = "0.12.3"
tonic-web = "0.11.0"
tonic-build = "0.12.0"
prost = "0.13.5"
tower = "0.5.2"
tower-http = { version = "0.5.0", features = ["cors"] }
http = "1.0.0"

# Threading
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"

common = { path = "./common" }
database = { path = "./database" }

