[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]

bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.70"
# Async
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
structopt = { version = "0.3", default-features = false }

