[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]

bigdecimal.workspace = true
chrono.workspace = true
uuid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
# Async
tokio.workspace = true
futures.workspace = true
structopt.workspace = true

