[package]
name = "bitrade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bitrade"
path = "src/main.rs"

[dependencies]
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
config.workspace = true
dotenv.workspace = true
uuid.workspace = true
strum.workspace = true
strum_macros.workspace = true
diesel_migrations.workspace = true
chrono.workspace = true
bigdecimal.workspace = true
anyhow.workspace = true
database.workspace = true
common.workspace = true
tracing-subscriber.workspace = true
structopt.workspace = true
prost.workspace = true
crossbeam.workspace = true
tonic.workspace = true
tracing.workspace = true
colored.workspace = true
thiserror.workspace = true
# New dependencies for gRPC-Web and CORS
tonic-web.workspace = true       # gRPC-Web support
http.workspace = true   
tower.workspace = true

[build-dependencies]
tonic-build.workspace = true

