[package]
name = "spot-query"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
anyhow.workspace = true
dotenv.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
structopt.workspace = true
log.workspace = true
env_logger.workspace = true
database.workspace = true
common.workspace = true

[build-dependencies]
tonic-build.workspace = true
